--- a/test-scss/about-us.html
+++ b/test-scss/about-us.html
@@ -186,7 +186,7 @@
                     </div>
                     <div class="right__side col-12 col-lg-7 pl-0">
                         <span
-                            class=" helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 mt-md-3 f-24 c-black">აუდიტორიაზე
+                            class=" helvetica-75 lh-20 d-inline-block mb-md-3 pb-md-1 mb-2 mt-md-3 f-24 c-black">აუდიტორიაზე
                             ადაპტირებული </span>
                         <span
                             class=" helvetica-55 d-inline-block mb-md-3 pb-md-1 mb-2 lh-24 f-16 c-card-text">კურსი
@@ -197,9 +197,9 @@
                         <div class="block d-flex d-md-none py-3 mb-3">
                             <img class="w-100" src="./img/Artboard-1.png" alt="">
                         </div>
-                        <span class=" helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 f-24 c-black lh-35">რეალური
+                        <p class=" helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 f-24 c-black lh-20">რეალური
                             ქეისები, რეალური სამუშაო
-                            შესაძლებლობები </span>
+                            შესაძლებლობები </p>
 
                         <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
                             ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
