--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -171,7 +171,7 @@
         <div class="center">
             <div class="d-flex justify-content-center py-60_page flex-wrap">
                 <div class="block d-flex flex-column py-3 col-12 col-md-3">
-                    <h1 class="f-28 mt-md-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
+                    <h1 class="f-28 mt-md-4 c-black helvetica-75 text-center mb-3">კარიერა</h1>
                     <span class="f-16 c-card-text helvetica-55 text-center">იპოვე შენთვის სასურველი ვაკანსია და
                         დასაქმდი, დასაქმდი </span>
                 </div>
@@ -184,14 +184,14 @@
         <div class="d-flex justify-content-between section flex-column flex-md-row align-items-start">
             <div class="left__side d-none d-md-flex flex-column  col-md-3 col-12 br-8 bc-gray-light py-3 top-100 position-sticky">
                 <div>
-                    <span class="f-13 c-black helvetica-75 d-block mb-2">ძიება</span>
+                    <span class="f-16 c-black helvetica-75 d-block mb-2">ძიება</span>
                     <div class="search-input-parent ">
                         <input class="search-input  w-100 bc-white career" type="text">
                     </div>
                 </div>
                 <div class="drop-parent  mt-3">
-                    <span class="f-13 c-black helvetica-75 d-block mb-2">კატეგორია</span>
-                    <div class=" dropdown-toggle br-8 p-2 bc-white w-100 drop d-flex align-items-center justify-content-between"
+                    <span class="f-16 c-black helvetica-75 d-block mb-2">კატეგორია</span>
+                    <div class=" dropdown-toggle br-8 p-2 pl-3 bc-white w-100 drop d-flex align-items-center justify-content-between"
                         type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <span class="py-1">
@@ -199,7 +199,7 @@
                         </span>
                         <img src="./img/Path.svg" alt="">
                     </div>
-                    <div class="dropdown-menu col-10 mt-2" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu w-100 mt-2 pt-0" aria-labelledby="dropdownMenuButton">
                         <div class="blcok mt-2 pointer w-100">
                             <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
                                 ნებისმიერი
@@ -224,9 +224,9 @@
                 </div>
                 <div>
                     <div class="mt-3">
-                        <span class="f-13 c-black helvetica-75 d-block mb-2">ადგილი</span>
+                        <span class="f-16 c-black helvetica-75 d-block mb-2">ადგილი</span>
 
-                        <input class="input w-100 border-0" type="text" placeholder="შეიყვანე ადგილი...">
+                        <input class="input w-100 border-0 pl-3 f-14" type="text" placeholder="შეიყვანე ადგილი...">
                     </div>
                 </div>
             </div>
@@ -243,15 +243,15 @@
                     </div>
                     <div class="drop-parent  mt-3">
                         <span class="f-16 c-black helvetica-75 d-block mb-2">კატეგორია</span>
-                        <div class=" dropdown-toggle br-8 p-2 bc-white w-100 drop d-flex align-items-center justify-content-between"
+                        <div class=" dropdown-toggle br-8 p-2 pl-3 bc-white w-100 drop d-flex align-items-center justify-content-between"
                             type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             <span class="py-1">
                                 ნებისმიერი
-                                <img src="./img/Path.svg" alt="">
                             </span>
+                            <img src="./img/Path.svg" alt="">
                         </div>
-                        <div class="dropdown-menu col-10 mt-2" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu w-100 pt-0 mt-2" aria-labelledby="dropdownMenuButton">
                             <div class="blcok mt-2 pointer w-100">
                                 <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
                                     ნებისმიერი
@@ -278,7 +278,7 @@
                         <div class="mt-3 pb-4">
                             <span class="f-16 c-black helvetica-75 d-block mb-2">ადგილი</span>
 
-                            <input class="input w-100 border-0 search-input career" type="text" placeholder="შეიყვანე ადგილი...">
+                            <input class="input w-100 border-0 search-input career pl-3" type="text" placeholder="შეიყვანე ადგილი...">
                         </div>
                     </div>
                 </div>
