--- a/test-scss/career_2.html
+++ b/test-scss/career_2.html
@@ -162,28 +162,30 @@
             </nav>
         </div>
     </section>
-    <div class="center py-4 my-2">
-        <button class="btn btn-light helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2"
-                src="./img/back.svg" alt=""> ukan</button>
+    <div class="pt-4 mb-4">
+        <div class="center py-4">
+            <button class="btn btn-light helvetica-55  f-16 d-flex align-items-center py-2"><img class="mr-2"
+                    src="./img/back.svg" alt=""> ukan</button>
+        </div>
     </div>
     <section class="details center pb-5">
         <div class="d-flex justify-content-between section flex-column flex-md-row-reverse align-items-start">
             <div
-                class="right__side d-md-flex d-none flex-column align-items-center justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
+                class="right__side d-md-flex d-none flex-column align-items-center top-100 position-sticky justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
                 <div class="d-flex flex-wrap  align-items-center w-100 py-1">
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 my-1 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/wach.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
-                    <div class=" br-8 mt-2 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 my-1 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/location.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 my-1 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/full.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
-                    <div class=" br-8 mt-2 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                    <div class=" br-8 my-1 ml-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/wallet.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
                     </div>
@@ -201,7 +203,7 @@
                     </div>
                     <div class="responsive_overlay d-md-none  box-shadow br-8 px-2 py-3 mb-4">
                         <div class="d-flex  center flex-wrap  align-items-center w-100 py-1">
-                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center mr-2">
                                 <img class="mr-2" src="./img/wach.svg" alt="">
                                 <span class="f-14 c-light-text helvetica-55">Redberry</span>
                             </div>
@@ -209,7 +211,7 @@
                                 <img class="mr-2" src="./img/location.svg" alt="">
                                 <span class="f-14 c-light-text helvetica-55">Redberry</span>
                             </div>
-                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center mr-2">
                                 <img class="mr-2" src="./img/full.svg" alt="">
                                 <span class="f-14 c-light-text helvetica-55">Redberry</span>
                             </div>
@@ -222,7 +224,8 @@
                     <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">ჩვენ ვართ Redberry –
                         ციფრული ტრანსფორმაციის სააგენტო და სტარტაპ სტუდია.</span>
 
-                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">დიდ ქართულ და საერთაშორისო
+                    <span class="f-16 lh-24 c-card-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">დიდ ქართულ და
+                        საერთაშორისო
                         კომპანიებს ვეხმარებით ციფრულ ტრანსფორმაციაში.
                         მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
