--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -46,43 +46,25 @@
             </div>
             <nav class="nav-header d-none d-lg-flex justify-content-between w-100">
                 <ul class="ul d-flex ">
-                    <li class="list mr-4 d-flex align-items-center">
+                    <li class="list d-flex align-items-center">
                         <a href="courses.html"
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კურსები</a>
+                            class="nav__a c-light-text  px-2 c-hover-blue transition helvetica-75">კურსები</a>
                     </li>
-                    <li class="list mr-4 d-flex align-items-center">
+                    <li class="list d-flex align-items-center">
                         <a href="masterclass.html"
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები
-                            <!-- <span class="drop__icon d-flex ml-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10.688"
-                                    viewBox="0 0 6 10.688">
-                                    <path id="Path_932" class="path" data-name="Path 932"
-                                        d="M187.694,328.864l-4.672-4.672a.667.667,0,1,0-.944.944l4.208,4.208-4.208,4.208a.667.667,0,1,0,.944.944l4.672-4.688A.675.675,0,0,0,187.694,328.864Z"
-                                        transform="translate(187.886 334.688) rotate(180)" fill="#9E9E9E"
-                                        fill-rule="evenodd" />
-                                </svg>
-                            </span> -->
+                            class="nav__a c-light-text px-2  c-hover-blue transition helvetica-75">მასტერკლასები
                         </a>
                     </li>
-                    <li class="list mr-4 d-flex align-items-center">
+                    <li class="list d-flex align-items-center">
                         <a href="Offers_packs.html"
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
+                            class="nav__a c-light-text  px-2 c-hover-blue transition helvetica-75">შეთავაზებები</a>
                     </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href="vlog.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">ბლოგი
-                            <!-- <span class="drop__icon d-flex ml-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10.688"
-                                    viewBox="0 0 6 10.688">
-                                    <path id="Path_932" class="path" data-name="Path 932"
-                                        d="M187.694,328.864l-4.672-4.672a.667.667,0,1,0-.944.944l4.208,4.208-4.208,4.208a.667.667,0,1,0,.944.944l4.672-4.688A.675.675,0,0,0,187.694,328.864Z"
-                                        transform="translate(187.886 334.688) rotate(180)" fill="#9E9E9E"
-                                        fill-rule="evenodd" />
-                                </svg>
-                            </span> -->
+                    <li class="list d-flex align-items-center">
+                        <a href="vlog.html" class="nav__a  px-2 c-light-text c-hover-blue transition helvetica-75">ბლოგი
                         </a>
                     </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href="about-us.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
+                    <li class="list d-flex align-items-center">
+                        <a href="about-us.html" class="nav__a  px-2 c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
                     </li>
                 </ul>
                 <ul class="ul right_ul d-flex align-items-center">
@@ -547,7 +529,7 @@
 
                 <div class="w-100 d-flex justify-content-between pt-3 align-items-stretch scroll-child overflow-auto">
 
-                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-3 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
@@ -565,7 +547,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-3 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
@@ -583,7 +565,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 mt-0 ml-0 ml-md-3 mr-3 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
