--- a/test-scss/lector.html
+++ b/test-scss/lector.html
@@ -152,7 +152,7 @@
                 </div>
                 <div class="texts mt-4 text-center border-bottom d-flex align-items-center flex-column pb-4">
                     <span class="c-black f-20 helvetica-55">ნიკოლოზ ერგემლიძე</span>
-                    <span class="c-light-text d-flex mt-3 f-14 helvetica-55">UI & UX დიზაინერი</span>
+                    <span class="c-card-text d-flex mt-3 f-14 helvetica-55">UI & UX დიზაინერი</span>
                 </div>
                 <div class="donwside d-flex align-items-center flex-column w-100">
                     <a
@@ -175,40 +175,69 @@
             </div>
             <div class="right__side col-12 col-md-9 pr-0 pl-md-4 pl-0">
                 <nav style="height: 60px;" class="nav-header">
-                    <ul class="nav h-100 flex-nowrap nav-tabs d-flex align-items-center" id="myTab" role="tablist">
-                        <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
+                    <ul class="nav h-100 lector-nav flex-nowrap nav-tabs d-flex align-items-center " id="myTab" role="tablist">
+                        <li class="nav-item list d-flex align-items-center" role="presentation">
                             <a style="height: 60px;"
-                                class=" nav__a c-light-text c-hover-blue transition helvetica-75 active lector"
+                                class=" px-2 nav__a c-light-text c-hover-blue transition helvetica-75 active lector"
                                 id="biograp-tab" data-toggle="tab" href="#biograp" role="tab" aria-controls="biograp"
                                 aria-selected="true">ბიოგრაფია</a>
                         </li>
-                        <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
-                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75 lector"
+                        <li class="nav-item list d-flex align-items-center" role="presentation">
+                            <a style="height: 60px;"
+                                class=" px-2 nav__a c-light-text c-hover-blue transition helvetica-75 lector"
                                 id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project"
                                 aria-selected="false">პროექტები</a>
                         </li>
-                        <li class="nav-item list mr-4 d-flex align-items-center" role="presentation">
-                            <a style="height: 60px;" class=" nav__a c-light-text c-hover-blue transition helvetica-75 lector"
+                        <li class="nav-item list d-flex align-items-center" role="presentation">
+                            <a style="height: 60px;"
+                                class=" px-2 nav__a c-light-text c-hover-blue transition helvetica-75 lector"
                                 id="video-tab" data-toggle="tab" href="#video" role="tab" aria-controls="video    "
                                 aria-selected="false">ვიდეო</a>
                         </li>
                     </ul>
+                    <!-- <div class="filter__place center d-flex align-items-center justify-content-between mt-md-4 pt-2" id="myTab" >
+
+                        <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
+                            <a class="filter-a f-14 c-light-text p-0 active show" active" id="nav-home-tab"
+                                data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home"
+                                aria-selected="true">
+                                <span class="px-3 py-2"  id="biograp-tab" data-toggle="tab" href="#biograp" role="tab" aria-controls="biograp">
+                                    ბიოგრაფია
+                                </span>
+                            </a>
+                            <a class="filter-a f-14 c-light-text p-0" id="nav-profile-tab" data-toggle="tab"
+                                href="#nav-profile" role="tab" aria-controls="nav-profile"
+                                aria-selected="false">
+                                <span class="px-3 py-2" id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project">
+                                    პროექტები
+                                </span>
+                            </a>
+                            <a class="filter-a f-14 c-light-text p-0" id="nav-contact-tab" data-toggle="tab"
+                                href="#nav-contact" role="tab" aria-controls="nav-contact"
+                                aria-selected="false">
+                                <span class="px-3 py-2" id="video-tab" data-toggle="tab" href="#video" role="tab" aria-controls="video" >
+                                    ვიდეო
+                                </span>
+                            </a>
+                        </div>
+                    </div> -->
+
                 </nav>
                 <div class="tab-body d-flex">
                     <div class="tab-pane fade show active col-12 p-0" id="biograp" role="tab"
                         aria-labelledby="biograp-tab">
                         <div>
-                            <span class="c-light-text f-16 helvetica-55 mt-4 d-flex">ამ სფეროში 2014 წლიდან მოღვაწეობს
+                            <span class="c-card-text f-16 helvetica-55 mt-4 d-flex">ამ სფეროში 2014 წლიდან მოღვაწეობს
                                 და მას შემდეგ 100-ზე მეტ </span>
-                            <span class="c-light-text f-16 helvetica-55 mt-4 d-flex">ისეთ პროექტებში როგორებიცაა: Hello
+                            <span class="c-card-text f-16 helvetica-55 mt-4 d-flex">ისეთ პროექტებში როგორებიცაა: Hello
                                 blog, Startuper, TBC raffle, Hello jazz, Ragby
                                 store, TSU store, TBC insurance, TBC credit, Geocell Movla App, Geocell Support
                                 platform. ასევე იმუშავა Tegeta Motors-ის ვებ გვერდზე, მისი დიზაინითაა
                             </span>
-                            <span class="c-light-text f-16 helvetica-55 mt-4 d-flex">2019 წელს მუშაობდა მსოფლიოში
+                            <span class="c-card-text f-16 helvetica-55 mt-4 d-flex">2019 წელს მუშაობდა მსოფლიოში
                                 წამყვან სააგენტოსთან Ueno სტარტაპ
                                 პროექტზე BlueVine.</span>
-                            <span class="c-light-text f-16 helvetica-55 mt-4 d-flex">ისეთ პროექტებში როგორებიცაა: Hello
+                            <span class="c-card-text f-16 helvetica-55 mt-4 d-flex">ისეთ პროექტებში როგორებიცაა: Hello
                                 blog, Startuper, TBC raffle, Hello jazz, Ragby
                                 store, TSU store, TBC insurance, TBC credit, Geocell Movla App, Geocell Support
                                 platform.</span>
@@ -217,7 +246,8 @@
 
 
                     </div>
-                    <div class="tab-pane fade d-flex flex-column flex-md-row mx-n2" id="project" role="tab" aria-labelledby="project-tab">
+                    <div class="tab-pane fade d-flex flex-column flex-md-row mx-n2" id="project" role="tab"
+                        aria-labelledby="project-tab">
                         <div class="block col-md-4 col-12 mt-4 px-md-2 px-0">
                             <div class=" bc-input-color br-8 px-4">
 
@@ -230,7 +260,7 @@
                                         <span class="c-light-text f-12 helvetica-55  d-flex">UI & UX დიზაინი</span>
                                     </div>
                                 </div>
-                                <span class="c-light-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
+                                <span class="c-card-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
                                     2019 წელს მუშაობდა
                                     მსოფლიოში წამყვან სააგენტოსთან Ueno სტარტაპ პროექტზე BlueVine.
                                 </span>
@@ -250,7 +280,7 @@
                                         <span class="c-light-text f-12 helvetica-55  d-flex">UI & UX დიზაინი</span>
                                     </div>
                                 </div>
-                                <span class="c-light-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
+                                <span class="c-card-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
                                     2019 წელს მუშაობდა
                                     მსოფლიოში წამყვან სააგენტოსთან Ueno სტარტაპ პროექტზე BlueVine.
                                 </span>
@@ -270,7 +300,7 @@
                                         <span class="c-light-text f-12 helvetica-55  d-flex">UI & UX დიზაინი</span>
                                     </div>
                                 </div>
-                                <span class="c-light-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
+                                <span class="c-card-text f-14 helvetica-55 pb-3 border-bottom d-flex">პროექტის შესახებ,
                                     2019 წელს მუშაობდა
                                     მსოფლიოში წამყვან სააგენტოსთან Ueno სტარტაპ პროექტზე BlueVine.
                                 </span>
@@ -279,10 +309,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane mx-auto fade d-flex justify-content-center" id="video" role="tab" aria-labelledby="video-tab">
+                    <div class="tab-pane mx-auto fade d-flex justify-content-center" id="video" role="tab"
+                        aria-labelledby="video-tab">
                         <div class="col-12 d-flex justify-content-center col-md-10 px-0 px-md-2 position-relative mt-4">
                             <img class="w-100 pointer" src="./img/Group 1641.svg" alt="">
-                            <span class="c-white f-24 helvetica-55 position-absolute left-30 bottom-25">UI&UX დიზაინის კურსი</span>
+                            <span class="c-white f-24 helvetica-55 position-absolute left-30 bottom-25">UI&UX დიზაინის
+                                კურსი</span>
 
                         </div>
                     </div>
