--- a/test-scss/work.html
+++ b/test-scss/work.html
@@ -143,7 +143,7 @@
     </header>
 
 
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-4 pt-1">
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-4 pt-1 pb-2">
         <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
@@ -156,7 +156,7 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
-        <div class="drop-parent px-0 col-6 col-md-3 mt-3 d-block d-md-none">
+        <div class="drop-parent px-0 col-8 col-md-3 mt-3 d-block d-md-none">
             <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
@@ -164,7 +164,7 @@
                 </span>
                 <img src="./img/Path.svg" alt="">
             </div>
-            <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu mt-2 px-2 w-100" aria-labelledby="dropdownMenuButton">
                 <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
                     <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
                         დიზაინი</span>
