--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -246,29 +246,29 @@
                         <div class=" dropdown-toggle br-8 p-2 pl-3 bc-white w-100 drop d-flex align-items-center justify-content-between"
                             type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
-                            <span class="py-1">
+                            <span class="py-1 f-14">
                                 ნებისმიერი
                             </span>
                             <img src="./img/Path.svg" alt="">
                         </div>
                         <div class="dropdown-menu w-100 pt-0 mt-2" aria-labelledby="dropdownMenuButton">
                             <div class="blcok mt-2 pointer w-100">
-                                <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                                <p class="px-3 w-100 f-14 c-light-text hover-bc-gray transition bc-white py-2">
                                     ნებისმიერი
                                 </p>
                             </div>
                             <div class="blcok mt-2 pointer w-100">
-                                <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                                <p class="px-3 w-100 f-14 c-light-text hover-bc-gray transition bc-white py-2">
                                     ნებისმიერი
                                 </p>
                             </div>
                             <div class="blcok mt-2 pointer w-100">
-                                <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                                <p class="px-3 w-100 f-14 c-light-text hover-bc-gray transition bc-white py-2">
                                     ნებისმიერი
                                 </p>
                             </div>
                             <div class="blcok mt-2 pointer w-100">
-                                <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                                <p class="px-3 w-100 f-14 c-light-text hover-bc-gray transition bc-white py-2">
                                     ნებისმიერი
                                 </p>
                             </div>
@@ -278,7 +278,7 @@
                         <div class="mt-3 pb-4">
                             <span class="f-16 c-black helvetica-75 d-block mb-2">ადგილი</span>
 
-                            <input class="input w-100 border-0 search-input career pl-3" type="text" placeholder="შეიყვანე ადგილი...">
+                            <input class="input w-100 border-0 f-14 search-input career pl-3" type="text" placeholder="შეიყვანე ადგილი...">
                         </div>
                     </div>
                 </div>
