--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -68,7 +68,11 @@
                     </li>
                 </ul>
                 <ul class="ul right_ul d-flex align-items-center">
-                    <li class="right__list mr-4 pointer">
+                    <!-- add on-search class to search block fot search appear -->
+                    <li class="right__list mr-4 pointer search-block d-flex align-items-center">
+                        <div class="mr-3 ">
+                            <input type="text" class="input w-100 header-search bc-input-color">
+                        </div>
                         <img src="./img/search-icon.svg" alt="">
                     </li>
                     <li class="right__list cart pointer mr-4">
