--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -187,7 +187,7 @@
                         <textarea name="" id="id-3"class="w-100 border-1 br-c-border br-8 pl-3 pt-2 bc-input-color" rows="10"></textarea>
                     </div>
                     <div class="mt-md-3 mt-2">
-                        <button class="blue-button">გაგზავნა</button>
+                        <button class="blue-button helvetica-75">გაგზავნა</button>
                     </div>
                 </div>
             </div>
