--- a/test-scss/work.html
+++ b/test-scss/work.html
@@ -372,13 +372,16 @@
                             <span class="f-12 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="align-items-center d-none d-md-flex" ">
                         <a class="mr-2" href="">
                             <img src="./img/fb.svg" alt="">
                         </a>
                         <a href="">
                             <img src="./img/twitter.svg" alt="">
                         </a>
+                    </div>
+                    <div class="d-flex d-md-none pointer"data-dismiss="modal" aria-label="Close">
+                        <img src="./img/close.svg" alt="">
                     </div>
                     <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
